--- a/app/views/widgets/index.html.haml
+++ b/app/views/widgets/index.html.haml
@@ -2,22 +2,6 @@
   .card-header
     %h1.card-title Listing widgets
   .card-body
-    %table
-      %thead
-        %tr
-          %th Name
-          %th Description
-          %th
-          %th
-          %th
-
-      %tbody
-        - @widgets.each do |widget|
-          %tr
-            %td= widget.name
-            %td= widget.description
-            %td= link_to 'Show', widget
-            %td= link_to 'Edit', edit_widget_path(widget)
-            %td= link_to 'Destroy', widget, method: :delete, data: { confirm: 'Are you sure?' }
+    = render_datatable WidgetDatatable.new
   .card-footer
     = link_to 'New Widget', new_widget_path
