--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -18,5 +18,8 @@
   .field
     = f.label :company
     = f.collection_select :company_id, Company.all, :id, :name
+  .field
+    = f.label :dead
+    = f.check_box :dead
   .actions
     = f.submit 'Save'
