--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -12,6 +12,9 @@
 %p
   %b Company:
   = @character.company
+%p
+  %b Dead:
+  = @character.dead
 
 = link_to 'Edit', edit_character_path(@character)
 \|
