--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -7,3 +7,11 @@
 = link_to 'Edit', edit_company_path(@company)
 \|
 = link_to 'Back', companies_path
+
+.card
+  .card-header
+    %h1.card-title Company characters
+  .card-body
+    = render_datatable @datatable
+  .card-footer
+    = link_to 'New Character', new_character_path
