Added based from column

--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -12,6 +12,10 @@
 %p
   %b Company:
   = @character.company
+
+  %p
+  %b Based from:
+  = @character.based_from
 %p
   %b Dead:
   = @character.dead
