--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -15,9 +15,13 @@
   .field
     = f.label :alias
     = f.text_field :alias
+    .field
+    = f.label :based_from
+    = f.text_field :based_from
   .field
     = f.label :company
     = f.collection_select :company_id, Company.all, :id, :name
+
   .field
     = f.label :dead
     = f.check_box :dead
