added cities/removed based from

--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -12,10 +12,9 @@
 %p
   %b Company:
   = @character.company
-
   %p
-  %b Based from:
-  = @character.based_from
+  %b City:
+  = @character.city
 %p
   %b Dead:
   = @character.dead
