--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -16,8 +16,8 @@
     = f.label :alias
     = f.text_field :alias
     .field
-    = f.label :based_from
-    = f.text_field :based_from
+    = f.label :city
+    = f.collection_select :city_id, City.all, :id, :name
   .field
     = f.label :company
     = f.collection_select :company_id, Company.all, :id, :name
